# data_eng_challenge

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scratchpad/: follow_up.txt  func_archive.py  working.txt
src/de_challenge/: app.py  data_lines.jsonl  shapes.py
src/plexure_challenge/: app.py  data.json  logging.py  shapes.py
tests/: __init__.py  test_triangle.py
