[project]
name = "plexure-challenge"
version = "0.1.0"
description = ""
authors = [
    {name = "Emma Corkery",email = "em.corkery2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "pyspark (>=3.5.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "plexure_challenge", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
