[tool.poetry]
name = "data-eng-challenge"
version = "0.1.0"
description = "Data engineering challenge app"
authors = ["Emma"]
packages = [{include = "de_challenge", from = "src"}]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
pytest = ">=8.3.5,<9.0.0"
pyspark = ">=3.5.5,<4.0.0"

[tool.poetry.scripts]
start = "de_challenge.app:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"
pre-commit = ">=4.2.0,<5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select =[
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade,
  "I",   # isort
]